force-app/main/default/objects/FundingAwardParticipant/FundingAwardParticipant.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>