force-app/main/default/objects/FundingAwardParticipant/fields/Account_RAG__c.field-meta.xml
<CustomField>
    <fullName>Account_RAG__c</fullName>
    <description>RAG Status of the related Account for the Consortium Member</description>
    <formula>IF(ISPICKVAL(Related_Account__r.ABS_Traffic_Light__c, &quot;Red&quot;), &quot;🔴&quot;, 
IF(ISPICKVAL(Related_Account__r.ABS_Traffic_Light__c, &quot;Amber&quot;),&quot;🟡&quot;, 
IF(ISPICKVAL(Related_Account__r.ABS_Traffic_Light__c, &quot;Green&quot;), &quot;🟢&quot;, null
)))</formula>
    <inlineHelpText>RAG Status of the related Account for the Consortium Member</inlineHelpText>
    <label>Account RAG</label>
    <type>Text</type>
</CustomField>