force-app/main/default/objects/FundingAwardParticipant/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <formula>TEXT(Related_Contact__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Type</label>
    <type>Text</type>
</CustomField>