force-app/main/default/objects/FundingAwardParticipant/fields/Funding_Award_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_Record_Type__c</fullName>
    <formula>FundingAward.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Award Record Type</label>
    <type>Text</type>
</CustomField>