force-app/main/default/objects/FundingAwardParticipant/fields/Participant_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Role_Name__c</fullName>
    <formula>ParticipantRole.MasterLabel</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Role Name</label>
    <type>Text</type>
</CustomField>