force-app/main/default/objects/FundingAwardParticipant/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to Account record</inlineHelpText>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Award Participants</relationshipLabel>
    <relationshipName>Funding_Award_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>