force-app/main/default/objects/FundingAwardParticipant/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to contact</inlineHelpText>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Award Participants</relationshipLabel>
    <relationshipName>Funding_Award_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>