force-app/main/default/objects/FundingAwardParticipant/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <label>Related User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>