force-app/main/default/objects/FundingAwardParticipant/fields/Report_Missing_Email_sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Missing_Email_sent_Date__c</fullName>
    <description>This field is used to manage to date of when reports haven&apos;t been submitted, it is then used to trigger a flow which will send an email to the users where this date changes. Flow that will read this value is:
Send Email to GR that haven&apos;t submitted their report</description>
    <label>Report Missing Email sent Date</label>
    <type>Date</type>
</CustomField>