force-app/main/default/objects/FundingAwardParticipant/listViews/All_Funding_Award_Participants.listView-meta.xml
<ListView>
    <fullName>All_Funding_Award_Participants</fullName>
    <columns>Name</columns>
    <columns>FundingAward</columns>
    <columns>Participant</columns>
    <columns>ParticipantRole</columns>
    <columns>IsParticipantActive</columns>
    <columns>Comments</columns>
    <filterScope>Everything</filterScope>
    <label>All Funding Award Participants</label>
</ListView>