force-app/main/default/objects/FundingAwardParticipant/listViews/LG_PSO_Funding_Award_Participants.listView-meta.xml
<ListView>
    <fullName>LG_PSO_Funding_Award_Participants</fullName>
    <columns>Name</columns>
    <columns>FundingAward</columns>
    <columns>Participant</columns>
    <columns>ParticipantRole</columns>
    <columns>IsParticipantActive</columns>
    <columns>Comments</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Participant_Role_Name__c</field>
        <operation>equals</operation>
        <value>Delivery Partner</value>
    </filters>
    <filters>
        <field>FundingAward</field>
        <operation>contains</operation>
        <value>WHLG</value>
    </filters>
    <label>LG PSO Funding Award Participants</label>
</ListView>